--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,11 @@ body {
   border-radius: 16px;
   padding: 16px;
   margin-bottom: 16px;
- 
+
 
 }
 img {
+  
   border-radius: 50%;
   width: 30%;
 }
@@ -37,11 +38,13 @@ header{
 
   header img ,p,h1,h4{
     margin: auto;
-  
       }
+      header img {
+        margin-top:1rem ;
+          }
     header h1{
         margin: auto;
-        margin-top: 1.5rem;
+        margin-top: 1.6rem;
         font-size: 1.5rem;
         font-weight:600 ;
           }
@@ -54,7 +57,8 @@ header{
               }
               header p{
                 margin: auto;
-                margin-top: 1rem;
+                margin-top: 1.2rem ;
+                margin-bottom: 1.2rem;
                 font-size: .8rem;
                 font-weight:400 ;
                   }
